manifest-files/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 3000
  type: ClusterIP
